<resources>
    <string name="app_name">CFT</string>

<!--    fragment_search-->
    <string name="bin">Введите BIN</string>

<!--    item_card-->
    <string name="scheme">scheme/network</string>
    <string name="brand">brand</string>
    <string name="cardNumber">card number</string>
    <string name="length">length</string>
    <string name="luhn">luhn</string>
    <string name="type">type</string>
    <string name="prepaid">prepaid</string>
    <string name="country">country</string>
    <string name="latitude">(latitude:</string>
    <string name="longitude">, longitude:</string>
    <string name="end">)</string>
    <string name="bank">bank</string>
</resources>